--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/person.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/person.xhtml
@@ -60,7 +60,7 @@
         <h:panelGroup
             id="#{cc.attrs.identifier}"
             layout="block"
-            styleClass="form grid-row #{cc.attrs.mainClass}">
+            styleClass="form grid-row #{cc.attrs.mainClass} #{!cc.attrs.propertyValid ? 'validate--danger' : ''}">
             <label
                 for="#{cc.attrs.identifier}_input"
                 class="zlb-label">
@@ -72,7 +72,7 @@
                 </h:panelGroup>
 
             </label>
-            <div class="form-field #{cc.attrs.subClass} #{!cc.attrs.propertyValid ? 'validate--danger' : ''}">
+            <div class="form-field #{cc.attrs.subClass}">
                 <x:inputText
                     id="#{cc.attrs.identifier}_input"
                     pt:aria-label="#{cc.attrs.labelText}"
@@ -80,7 +80,7 @@
                     value="#{cc.attrs.value}"
                     validator="#{field.validateField}"
                     onfocus="focusField(this);">
-                    <f:ajax
+                    <f:ajax event="blur"
                         render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
@@ -95,7 +95,7 @@
                     value="#{cc.attrs.secondValue}"
                     validator="#{field.validateField}"
                     onfocus="focusField(this);">
-                    <f:ajax
+                    <f:ajax event="blur"
                         render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
@@ -113,7 +113,7 @@
                     <f:selectItem
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
-                    <f:ajax
+                    <f:ajax event="blur"
                         render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
