--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
@@ -60,7 +60,7 @@
         <h:panelGroup
             id="#{cc.attrs.identifier}"
             layout="block"
-            styleClass="form grid-row #{cc.attrs.mainClass}">
+            styleClass="form grid-row #{cc.attrs.mainClass} #{!cc.attrs.propertyValid ? 'validate--danger' : ''}">
             <label
                 for="#{cc.attrs.identifier}_input"
                 class="zlb-label">
@@ -71,7 +71,7 @@
                     <i class="fa fa-asterisk" />
                 </h:panelGroup>
             </label>
-            <div class="form-field #{cc.attrs.subClass} #{!cc.attrs.propertyValid ? 'validate--danger' : ''}">
+            <div class="form-field #{cc.attrs.subClass}">
 
 
                 <h:selectOneMenu
@@ -84,7 +84,7 @@
                     <f:selectItem
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
-                    <f:ajax
+                    <f:ajax event="blur"
                         render="@form"
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
@@ -97,7 +97,7 @@
                     value="#{cc.attrs.value}"
                     validator="#{field.validateField}"
                     onfocus="focusField(this);">
-                    <f:ajax
+                    <f:ajax event="blur"
                         render="@form"
                         execute="@this" />
                     <f:passThroughAttribute
