--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/formOutputTxt.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/formOutputTxt.xhtml
@@ -63,6 +63,7 @@
                             #{msgs.plugin_rest_usercreation_new_account_overview_uncheckedCheck_ariaLabel}
                         </label>
                     </div>
+                    <x:outputText escape="false" style="border:0px;" styleClass="#{cc.attrs.fieldStyle}" value="#{msgs.plugin_rest_usercreation_new_account_notSelected}" tabindex="#{cc.attrs.tabindex}"/>
                 </ui:fragment>
 
                 <ui:fragment rendered="#{!cc.attrs.showDisabledCheckBox}">
