Upload form: change icon; refs #23716

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/uploadFormIcons.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/uploadFormIcons.xhtml
@@ -17,10 +17,10 @@
 	<composite:implementation>
 
 		<div class="form__icons">
-			<ui:include src="/uii/includes/icon-file-image.xhtml" />
+			<ui:include src="/uii/includes/icon-book.xhtml" />
 		</div>
 		<div class="form__icons d-none">
-			<ui:include src="/uii/includes/icon-file-upload.xhtml" />
+			<ui:include src="/uii/includes/icon-book.xhtml" />
 		</div>
 
 	</composite:implementation>
