--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
@@ -95,6 +95,7 @@
                             value="#{cc.attrs.booleanValue}"
                             onfocus="focusField(this);">
                             <f:ajax
+                                event="valueChange"
                                 render="#{cc.attrs.render}"
                                 execute="@this" />
                         </h:selectBooleanCheckbox>
@@ -112,6 +113,7 @@
                             value="#{cc.attrs.subValue}"
                             onfocus="focusField(this);">
                             <f:ajax
+                                event="valueChange"
                                 render="#{cc.attrs.render}"
                                 execute="@this" />
                             <f:selectItems value="#{cc.attrs.selectItems}" />
@@ -175,7 +177,7 @@
                         validator="#{field.validateField}"
                         onfocus="focusField(this);">
                         <f:ajax
-                            event="blur"
+                            event="valueChange"
                             render="#{cc.attrs.render}"
                             execute="@this focusField" />
                         <f:passThroughAttribute
@@ -192,7 +194,7 @@
                         validator="#{field.validateField}"
                         onfocus="focusField(this);">
                         <f:ajax
-                            event="blur"
+                            event="valueChange"
                             render="#{cc.attrs.render}"
                             execute="@this" />
                         <f:passThroughAttribute
@@ -211,7 +213,7 @@
                             itemValue=""
                             itemLabel="#{msgs.bitteAuswaehlen}" />
                         <f:ajax
-                            event="blur"
+                            event="valueChange"
                             render="#{cc.attrs.render}"
                             execute="@this" />
                         <f:selectItems value="#{cc.attrs.selectItems}" />
