--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
@@ -84,7 +84,7 @@
                     <f:selectItem
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
-                    <f:ajax event="blur"
+                    <f:ajax event="change"
                         render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
@@ -97,7 +97,7 @@
                     value="#{cc.attrs.value}"
                     validator="#{field.validateField}"
                     onfocus="focusField(this);">
-                    <f:ajax event="blur"
+                    <f:ajax event="change"
                         render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
