--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
@@ -52,6 +52,9 @@
             name="displayDuplicateButton"
             default="false" />
         <composite:attribute
+            name="displayRemoveButton"
+            default="false" />
+        <composite:attribute
             name="render"
             default="@form" />
 
@@ -80,7 +83,8 @@
                     value="#{cc.attrs.value}"
                     validator="#{field.validateField}"
                     onfocus="focusField(this);">
-                    <f:ajax event="change"
+                    <f:ajax
+                        event="change"
                         render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
@@ -99,7 +103,8 @@
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
-                    <f:ajax event="change"
+                    <f:ajax
+                        event="change"
                         render="#{cc.attrs.render}"
                         execute="@this" />
                 </h:selectOneMenu>
@@ -120,6 +125,21 @@
                             target="#{DashboardForm.plugin.currentField}" />
                     </button>
                 </h:panelGroup>
+                <h:panelGroup rendered="#{cc.attrs.displayRemoveButton}">
+                    <button
+                        jsf:id="removeButton"
+                        jsf:action="#{DashboardForm.plugin.removeMetadataField}"
+                        class="form-icons__button form-icons__button--duplicate"
+                        aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementDeletion}"
+                        onfocus="focusField(this);">
+                        <ui:include src="/uii/includes/icon-minus.xhtml" />
+                        <f:setPropertyActionListener
+                            value="#{field}"
+                            target="#{DashboardForm.plugin.currentField}" />
+                    </button>
+                </h:panelGroup>
+
+
                 <h:panelGroup rendered="#{cc.attrs.showHelpBtn}">
                     <button
                         jsf:id="showHelpCorporate"
