--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
@@ -102,7 +102,7 @@
                     <f:selectItem
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
-                    <f:selectItems value="#{cc.attrs.selectItems}" />
+                    <f:selectItems value="#{cc.attrs.selectItems}" var="#{cc.attrs.var}" itemLabel="#{cc.attrs.itemLabel}" itemValue="#{cc.attrs.itemValue}" />
                     <f:ajax
                         event="change"
                         render="#{cc.attrs.render}"
