Move global alert into the upload form; refs #24164

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/uploadFormMessages.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/uploadFormMessages.xhtml
@@ -17,7 +17,7 @@
 	<composite:implementation>
 
 		<!-- Messages -->
-		<p class="form__msg">#{msgs.plugin_dashboard_delivery_uploadFormMessage}</p>
+		<p class="form__msg"><span class="form__msg__text">#{msgs.plugin_dashboard_delivery_uploadFormMessage}</span></p>
 		<div class="form__msg-or">
 			#{msgs.plugin_dashboard_delivery_or}
 		</div>
