allow html elements in output texts

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/modal.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/modal.xhtml
@@ -18,7 +18,7 @@
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-						<h2 class="modal-title">#{cc.attrs.modalTitle}</h2>
+						<h2 class="modal-title"><h:outputText escape="false" value="#{cc.attrs.modalTitle}" /></h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
