show modal title

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
@@ -136,7 +136,8 @@
                             aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementHelp}"
                             data-bs-toggle="modal"
                             data-bs-target="#exampleModal"
-                            data-bs-body="#{cc.attrs.helpText}">
+                            data-bs-body="#{cc.attrs.helpText}"
+                            data-bs-title="#{cc.attrs.helpTitle}">
                             <ui:include src="/uii/includes/icon-help.xhtml" />
                         </button>
                     </h:panelGroup>
