escape mesage texts

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/urlUploadModal.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/urlUploadModal.xhtml
@@ -53,7 +53,7 @@
                 </div>
             </h:form>
 
-            <p class="modal__help-msg invisible">#{msgs.plugin_dashboard_delivery_urlUploadForm_helpMsg}</p>
+            <p class="modal__help-msg invisible"><h:outputText escape="false" value="#{msgs.plugin_dashboard_delivery_urlUploadForm_helpMsg}"/></p>
 
             <!-- toggle help message -->
             <script>
