--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
@@ -67,9 +67,7 @@
             styleClass="form #{cc.attrs.mainClass} #{!cc.attrs.propertyValid ? 'validate--danger' : ''}">
             <label
                 class="zlb-label"
-                for="#{cc.attrs.identifier}_input">
-                #{cc.attrs.labelText}
-                <h:panelGroup
+                for="#{cc.attrs.identifier}_input"> #{cc.attrs.labelText} <h:panelGroup
                     styleClass="input-required"
                     rendered="#{cc.attrs.fieldRequired}">
                     <i class="fa fa-asterisk" />
@@ -102,7 +100,11 @@
                     <f:selectItem
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
-                    <f:selectItems value="#{cc.attrs.selectItems}" var="#{cc.attrs.var}" itemLabel="#{cc.attrs.itemLabel}" itemValue="#{cc.attrs.itemValue}" />
+                    <f:selectItems
+                        value="#{cc.attrs.selectItems}"
+                        var="#{cc.attrs.var}"
+                        itemLabel="#{cc.attrs.itemLabel}"
+                        itemValue="#{cc.attrs.itemValue}" />
                     <f:ajax
                         event="change"
                         render="#{cc.attrs.render}"
@@ -123,6 +125,9 @@
                         <f:setPropertyActionListener
                             value="#{field}"
                             target="#{DashboardForm.plugin.currentField}" />
+                        <f:ajax
+                            render="@form"
+                            execute="@this" />
                     </button>
                 </h:panelGroup>
                 <h:panelGroup rendered="#{cc.attrs.displayRemoveButton}">
@@ -136,6 +141,9 @@
                         <f:setPropertyActionListener
                             value="#{field}"
                             target="#{DashboardForm.plugin.currentField}" />
+                        <f:ajax
+                            render="@form"
+                            execute="@this" />
                     </button>
                 </h:panelGroup>
 
@@ -156,14 +164,15 @@
                 </h:panelGroup>
             </div>
 
-			<h:panelGroup id="errormessage">
-            	<h:panelGroup
-                	layout="block"
-                	rendered="#{!cc.attrs.propertyValid}"
-                	styleClass="font-danger validation-message" style="color: var(--clr-danger); font-size: var(--fs-200);">
-               		<h:outputText value="#{msgs[cc.attrs.errorMessageText]}" />
-            	</h:panelGroup>
-			</h:panelGroup>            
+            <h:panelGroup id="errormessage">
+                <h:panelGroup
+                    layout="block"
+                    rendered="#{!cc.attrs.propertyValid}"
+                    styleClass="font-danger validation-message"
+                    style="color: var(--clr-danger); font-size: var(--fs-200);">
+                    <h:outputText value="#{msgs[cc.attrs.errorMessageText]}" />
+                </h:panelGroup>
+            </h:panelGroup>
             <h:outputText
                 styleClass="help-block font-light"
                 rendered="#{NavigationForm.showHelp}"
