--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
@@ -134,6 +134,9 @@
                         <f:setPropertyActionListener
                             value="#{field}"
                             target="#{DashboardForm.plugin.currentField}" />
+                        <f:ajax
+                            render="@form"
+                            execute="@this" />                            
                     </button>
                 </h:panelGroup>
                 <h:panelGroup rendered="#{cc.attrs.displayRemoveButton}">
@@ -147,6 +150,9 @@
                         <f:setPropertyActionListener
                             value="#{field}"
                             target="#{DashboardForm.plugin.currentField}" />
+                        <f:ajax
+                            render="@form"
+                            execute="@this" />                            
                     </button>
                 </h:panelGroup>
                 <h:panelGroup rendered="#{cc.attrs.showHelpBtn}">
