--- a/module-gui/src/main/webapp/resources/composites/field.xhtml
+++ b/module-gui/src/main/webapp/resources/composites/field.xhtml
@@ -105,7 +105,7 @@
 
                         <zlb:label
                             labelFor="activation"
-                            labelText="#{cc.attrs.labelText}"
+                            labelText="#{msgs[cc.attrs.labelText]}"
                             labelHelpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr"
                             labelRequired="#{cc.attrs.fieldRequired}" />
 
@@ -122,7 +122,7 @@
                             <f:selectItems
                                 value="#{cc.attrs.selectItems}"
                                 var="#{cc.attrs.var}"
-                                itemLabel="#{cc.attrs.itemLabel}"
+                                itemLabel="#{msgs[cc.attrs.itemLabel]}"
                                 itemValue="#{cc.attrs.itemValue}" />
                         </h:selectOneRadio>
 
@@ -140,8 +140,8 @@
                             aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementHelp}"
                             data-bs-toggle="modal"
                             data-bs-target="#exampleModal"
-                            data-bs-body="#{cc.attrs.helpText}"
-                            data-bs-title="#{cc.attrs.helpTitle}">
+                            data-bs-body="#{msgs[cc.attrs.helpText]}"
+                            data-bs-title="#{msgs[cc.attrs.helpTitle]}">
                             <ui:include src="/uii/includes/icon-help.xhtml" />
                         </button>
                     </h:panelGroup>
@@ -153,12 +153,12 @@
                     layout="block"
                     rendered="#{!cc.attrs.propertyValid}"
                     styleClass="font-danger validation-message">
-                    <h:outputText value="#{cc.attrs.errorMessageText}" />
+                    <h:outputText value="#{msgs[cc.attrs.errorMessageText]}" />
                 </h:panelGroup>
                 <h:outputText
                     styleClass="help-block font-light"
                     rendered="#{NavigationForm.showHelp}"
-                    value="#{cc.attrs.labelHelpText}" />
+                    value="#{msgs[cc.attrs.labelHelpText]}" />
             </ui:fragment>
 
             <ui:fragment rendered="#{cc.attrs.fieldType!='checkbox' and cc.attrs.fieldType!='combo'}">
@@ -166,7 +166,7 @@
                     for="#{cc.attrs.identifier}_input"
                     class="zlb-label"> <h:outputText
                         escape="false"
-                        value="#{cc.attrs.labelText}" /> <h:panelGroup
+                        value="#{msgs[cc.attrs.labelText]}" /> <h:panelGroup
                         styleClass="input-required"
                         rendered="#{cc.attrs.fieldRequired}">
                         <i class="fa fa-asterisk" />
@@ -188,7 +188,7 @@
                             execute="@this focusField" />
                         <f:passThroughAttribute
                             name="placeholder"
-                            value="#{cc.attrs.placeholderText}" />
+                            value="#{msgs[cc.attrs.placeholderText]}" />
                     </x:inputText>
 
                     <x:inputTextarea
@@ -205,7 +205,7 @@
                             execute="@this" />
                         <f:passThroughAttribute
                             name="placeholder"
-                            value="#{cc.attrs.placeholderText}" />
+                            value="#{msgs[cc.attrs.placeholderText]}" />
                     </x:inputTextarea>
                     <h:selectOneMenu
                         id="#{cc.attrs.identifier}_select"
@@ -225,14 +225,14 @@
                         <f:selectItems
                             value="#{cc.attrs.selectItems}"
                             var="#{cc.attrs.var}"
-                            itemLabel="#{cc.attrs.itemLabel}"
+                            itemLabel="#{msgs[cc.attrs.itemLabel]}"
                             itemValue="#{cc.attrs.itemValue}" />
                     </h:selectOneMenu>
 
                     <h:outputText
                         rendered="#{cc.attrs.fieldType=='output'}"
                         styleClass="form-control #{cc.attrs.fieldStyle}"
-                        value="#{cc.attrs.value}">
+                        value="#{msgs[cc.attrs.value]}">
                     </h:outputText>
 
 
@@ -281,8 +281,8 @@
                                 aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementHelp}"
                                 data-bs-toggle="modal"
                                 data-bs-target="#exampleModal"
-                                data-bs-body="#{cc.attrs.helpText}"
-                                data-bs-title="#{cc.attrs.helpTitle}">
+                                data-bs-body="#{msgs[cc.attrs.helpText]}"
+                                data-bs-title="#{msgs[cc.attrs.helpTitle]}">
                                 <ui:include src="/uii/includes/icon-help.xhtml" />
                             </button>
                         </h:panelGroup>
@@ -299,7 +299,7 @@
                     <h:outputText
                         styleClass="help-block font-light"
                         rendered="#{NavigationForm.showHelp}"
-                        value="#{cc.attrs.labelHelpText}" />
+                        value="#{msgs[cc.attrs.labelHelpText]}" />
                 </div>
 
 
