--- a/module-gui/src/main/webapp/resources/composites/person.xhtml
+++ b/module-gui/src/main/webapp/resources/composites/person.xhtml
@@ -67,7 +67,7 @@
             <label
                 for="#{cc.attrs.identifier}_input"
                 class="zlb-label">
-                #{cc.attrs.labelText}
+                #{msgs[cc.attrs.labelText]}
                 <h:panelGroup
                     styleClass="input-required"
                     rendered="#{cc.attrs.fieldRequired}">
@@ -78,7 +78,7 @@
             <div class="form-field #{cc.attrs.subClass}">
                 <x:inputText
                     id="#{cc.attrs.identifier}_firstname"
-                    pt:aria-label="#{cc.attrs.labelText}"
+                    pt:aria-label="#{msgs[cc.attrs.labelText]}"
                     styleClass="form-control #{cc.attrs.fieldStyle}"
                     value="#{cc.attrs.value}"
                     validator="#{field.validateField}"
@@ -89,12 +89,12 @@
                         execute="@this" />
                     <f:passThroughAttribute
                         name="placeholder"
-                        value="#{cc.attrs.placeholderText}" />
+                        value="#{msgs[cc.attrs.placeholderText]}" />
                 </x:inputText>
 
                 <x:inputText
                     id="#{cc.attrs.identifier}_lastname"
-                    pt:aria-label="#{cc.attrs.labelText}"
+                    pt:aria-label="#{msgs[cc.attrs.labelText]}"
                     styleClass="form-control #{cc.attrs.fieldStyle}"
                     value="#{cc.attrs.secondValue}"
                     validator="#{field.validateField}"
@@ -105,7 +105,7 @@
                         execute="@this" />
                     <f:passThroughAttribute
                         name="placeholder"
-                        value="#{cc.attrs.placeholderText}" />
+                        value="#{msgs[cc.attrs.placeholderText]}" />
                 </x:inputText>
 
                 <h:selectOneMenu
@@ -123,7 +123,7 @@
                         event="change"
                         render="#{cc.attrs.render}"
                         execute="@this" />
-                    <f:selectItems value="#{cc.attrs.selectItems}" var="#{cc.attrs.var}" itemLabel="#{cc.attrs.itemLabel}" itemValue="#{cc.attrs.itemValue}" />
+                    <f:selectItems value="#{cc.attrs.selectItems}" var="#{cc.attrs.var}" itemLabel="#{msgs[cc.attrs.itemLabel]}" itemValue="#{cc.attrs.itemValue}" />
                 </h:selectOneMenu>
             </div>
 
@@ -171,8 +171,8 @@
                         aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementHelp}"
                         data-bs-toggle="modal"
                         data-bs-target="#exampleModal"
-                        data-bs-body="#{cc.attrs.helpText}"
-                        data-bs-title="#{cc.attrs.helpTitle}">
+                        data-bs-body="#{msgs[cc.attrs.helpText]}"
+                        data-bs-title="#{msgs[cc.attrs.helpTitle]}">
                         <ui:include src="/uii/includes/icon-help.xhtml" />
                     </button>
                 </h:panelGroup>
