--- a/module-gui/src/main/webapp/resources/composites/corporate.xhtml
+++ b/module-gui/src/main/webapp/resources/composites/corporate.xhtml
@@ -5,7 +5,6 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
-    xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
     xmlns:jsf="http://xmlns.jcp.org/jsf">
 
@@ -74,7 +73,7 @@
                 </h:panelGroup>
             </label>
             <div class="form-field #{cc.attrs.subClass}">
-                <x:inputText
+                <h:inputText
                     id="corporate_input"
                     pt:aria-label="#{cc.attrs.labelText}"
                     styleClass="form-control #{cc.attrs.fieldStyle} corporate"
@@ -88,7 +87,7 @@
                     <f:passThroughAttribute
                         name="placeholder"
                         value="#{msgs[cc.attrs.placeholderText]}" />
-                </x:inputText>
+                </h:inputText>
 
                 <h:selectOneMenu
                     id="#{cc.attrs.identifier}_select"
@@ -102,7 +101,7 @@
                         itemLabel="#{msgs.bitteAuswaehlen}" />
                     <f:selectItems
                         value="#{cc.attrs.selectItems}"
-                        var="#{cc.attrs.var}"
+                        var="var"
                         itemLabel="#{msgs[cc.attrs.itemLabel]}"
                         itemValue="#{cc.attrs.itemValue}" />
                     <f:ajax
