--- a/module-gui/src/main/webapp/resources/composites/field.xhtml
+++ b/module-gui/src/main/webapp/resources/composites/field.xhtml
@@ -6,7 +6,6 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
-    xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
     xmlns:jsf="http://xmlns.jcp.org/jsf">
 
@@ -50,7 +49,6 @@
         <!-- #{field.selectItemList} -->
         
         <composite:attribute name="selectItems" />
-        <composite:attribute name="var" default="var" />        
         <composite:attribute name="itemValue" default="#{var.value}"/>
         <composite:attribute name="itemLabel" default="#{msgs[var.label]}" />
 
@@ -128,7 +126,7 @@
                                 execute="@this" />
                         	<f:selectItems
                             	value="#{cc.attrs.selectItems}"
-                            	var="#{cc.attrs.var}"
+                            	var="var"
                             	itemLabel="#{cc.attrs.itemLabel}" 
                             	itemValue="#{cc.attrs.itemValue}" />
                         </h:selectOneRadio>
@@ -181,7 +179,7 @@
                 </label>
 
                 <div class="form form-field #{cc.attrs.subClass} #{!cc.attrs.propertyValid ? 'validate--danger' : ''}">
-                    <x:inputText
+                    <h:inputText
                         id="#{cc.attrs.identifier}_input"
                         rendered="#{cc.attrs.fieldType=='input'}"
                         pt:aria-label="#{cc.attrs.labelText}"
@@ -196,9 +194,9 @@
                         <f:passThroughAttribute
                             name="placeholder"
                             value="#{msgs[cc.attrs.placeholderText]}" />
-                    </x:inputText>
+                    </h:inputText>
 
-                    <x:inputTextarea
+                    <h:inputTextarea
                         id="#{cc.attrs.identifier}_textare"
                         rendered="#{cc.attrs.fieldType=='textarea'}"
                         pt:aria-label="#{cc.attrs.labelText}"
@@ -213,7 +211,7 @@
                         <f:passThroughAttribute
                             name="placeholder"
                             value="#{msgs[cc.attrs.placeholderText]}" />
-                    </x:inputTextarea>
+                    </h:inputTextarea>
                     <h:selectOneMenu
                         id="#{cc.attrs.identifier}_select"
                         rendered="#{cc.attrs.fieldType=='dropdown' or cc.attrs.fieldType=='journaltitles'}"
@@ -231,7 +229,7 @@
                             execute="@this" />
                         <f:selectItems
                             value="#{cc.attrs.selectItems}"
-                            var="#{cc.attrs.var}"
+                            var="var"
                             itemLabel="#{msgs[cc.attrs.itemLabel]}"
                             itemValue="#{cc.attrs.itemValue}" />
                     </h:selectOneMenu>
