--- a/module-gui/src/main/webapp/resources/composites/person.xhtml
+++ b/module-gui/src/main/webapp/resources/composites/person.xhtml
@@ -5,7 +5,6 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
-    xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
     xmlns:jsf="http://xmlns.jcp.org/jsf">
 
@@ -76,7 +75,7 @@
 
             </label>
             <div class="form-field #{cc.attrs.subClass}">
-                <x:inputText
+                <h:inputText
                     id="#{cc.attrs.identifier}_firstname"
                     pt:aria-label="#{msgs[cc.attrs.labelText]}"
                     styleClass="form-control #{cc.attrs.fieldStyle}"
@@ -90,9 +89,9 @@
                     <f:passThroughAttribute
                         name="placeholder"
                         value="#{msgs[cc.attrs.placeholderText]}" />
-                </x:inputText>
+                </h:inputText>
 
-                <x:inputText
+                <h:inputText
                     id="#{cc.attrs.identifier}_lastname"
                     pt:aria-label="#{msgs[cc.attrs.labelText]}"
                     styleClass="form-control #{cc.attrs.fieldStyle}"
@@ -106,7 +105,7 @@
                     <f:passThroughAttribute
                         name="placeholder"
                         value="#{msgs[cc.attrs.placeholderText]}" />
-                </x:inputText>
+                </h:inputText>
 
                 <h:selectOneMenu
                     id="#{cc.attrs.identifier}_select"
@@ -123,7 +122,7 @@
                         event="change"
                         render="#{cc.attrs.render}"
                         execute="@this" />
-                    <f:selectItems value="#{cc.attrs.selectItems}" var="#{cc.attrs.var}" itemLabel="#{msgs[cc.attrs.itemLabel]}" itemValue="#{cc.attrs.itemValue}" />
+                    <f:selectItems value="#{cc.attrs.selectItems}" var="var" itemLabel="#{msgs[cc.attrs.itemLabel]}" itemValue="#{cc.attrs.itemValue}" />
                 </h:selectOneMenu>
             </div>
 
