--- a/module-gui/src/main/webapp/resources/composites/picklist.xhtml
+++ b/module-gui/src/main/webapp/resources/composites/picklist.xhtml
@@ -5,7 +5,6 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
-    xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
     xmlns:jsf="http://xmlns.jcp.org/jsf">
 
@@ -91,10 +90,10 @@
                         event="change"
                         render="#{cc.attrs.render}"
                         execute="@this" />
-                    <f:selectItems value="#{cc.attrs.selectItems}" var="#{cc.attrs.var}" itemLabel="#{msgs[cc.attrs.itemLabel]}" itemValue="#{cc.attrs.itemValue}" />
+                    <f:selectItems value="#{cc.attrs.selectItems}" var="var" itemLabel="#{msgs[cc.attrs.itemLabel]}" itemValue="#{cc.attrs.itemValue}" />
                 </h:selectOneMenu>
 
-                <x:inputText
+                <h:inputText
                     id="#{cc.attrs.identifier}_input"
                     pt:aria-label="#{msgs[cc.attrs.labelText]}"
                     styleClass="form-control #{cc.attrs.fieldStyle}"
@@ -108,7 +107,7 @@
                     <f:passThroughAttribute
                         name="placeholder"
                         value="#{msgs[cc.attrs.placeholderText]}" />
-                </x:inputText>
+                </h:inputText>
 
                 <h:panelGroup
                     layout="block"
