--- a/module-gui/src/main/webapp/resources/uii/external_index.xhtml
+++ b/module-gui/src/main/webapp/resources/uii/external_index.xhtml
@@ -3,12 +3,12 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
-    template="/uii/template/reduced_content_template.html"    
+    template="/uii/template/reduced_content_template.html"
     xmlns:intranda="http://xmlns.jcp.org/jsf/composite/composites"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
     xmlns:zlb="http://xmlns.jcp.org/jsf/composite/composites">
 
-<!--     template="/uii/templatePG/templatePG.html" -->
+<!--     template="/uii/template/template.html" -->
 
     <ui:param
         name="myPageTitle"
@@ -35,7 +35,7 @@
 
             <p>
                 Content area
-            </p>            
+            </p>
         </main>
     </ui:define>
 
